hphp/hack/test/typecheck/is_expression/primitive_union.php.like_types.exp
File "primitive_union.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive_union.php", line 13, characters 26-33:
Expected arraykey
File "primitive_union.php", line 3, characters 15-19:
But got null
File "primitive_union.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive_union.php", line 13, characters 26-33:
Expected arraykey
File "primitive_union.php", line 3, characters 15-19:
But got nonnull
File "primitive_union.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive_union.php", line 14, characters 21-23:
Expected num
File "primitive_union.php", line 3, characters 15-19:
But got null
File "primitive_union.php", line 3, characters 15-19:
Invalid argument (Typing[4110])
File "primitive_union.php", line 14, characters 21-23:
Expected num
File "primitive_union.php", line 3, characters 15-19:
But got nonnull
